common/loginpage/src/css/styles.less
/* ... */
.file-list-body {
  display: flex;
  flex-direction: column;
  gap: @layout-list-items-gap;

  .row {
    position: relative;
    border-radius: @border-radius-list-files-item;
    padding-top: 8px;
    padding-bottom: 8px;

    .col-name, .col-date {
      display: flex;
      align-items: center;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .col-name {
      height: 32px;

      .icon {
        width: 32px;
        height: 32px;
      }

      .name {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        margin-left: 8px;

        .rtl & {
          margin-left: 0;
          margin-right: 8px;
        }
      }

      .ext {
        color: @text-secondary;
      }
    }

    .col-location {
      height: 24px;
      text-align: left;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      .rtl & {
        text-align: right;
      }
    }

    .col-date {
      height: 24px;
      justify-content: flex-end;
    }

    .col-more {
      position: absolute;
      top: 0;
      bottom: 0;
      right: 16px;
      opacity: 0;
      display: flex;
      align-items: center;

      button {
        color: @icon-normal;
        padding: 0;
        align-items: center;

        &:active {
          background: color-mix(in srgb, @icon-normal, 15%, transparent); // 555F65 15%
          color: @icon-normal;
        }

        .icon {
          opacity: 0.5;

          &:hover {
            opacity: 1;
          }

          fill: @background-icon-normal;
          stroke: @icon-normal;
        }
      }

      .rtl & {
        right: unset;
        left: 16px;
      }
    }

    &:nth-child(even) {
      background-color: @background-normal-element-light;
    }

    &:hover:not(.unavail) {
      .col-more {
        opacity: 1;
      }
    }

    &:hover {
      background-color: @highlight-button-hover;
    }

    &:active, &[data-active] {
      background-color: @highlight-button-pressed;
    }
  }
}

.action-panel {
  display: none;
  height: 100%;
  padding: 40px;
  background-color: @background-action-panel;
  color: @text-normal;

  > label {
    position: absolute;
    top: 50%;
  }

  &.style--free {
    padding: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
  }

  &.settings {
    overflow-x: hidden;
    min-width: 450px;
  }

  &.about {
    overflow-x: scroll;
    min-width: 450px;
  }

  &.recents {
    padding: 32px 0;
    /*padding: 0;*/
  }

  &.templates {
    /*        padding: 20px;*/
  }

  // Folders
  &.open {
    .file-list-body .row {
      justify-content: normal;
      gap: clamp(10px, 6vw, 104px);
      > div {
            min-width: 30px; 
        }
    }

    .file-list-title {
      margin-bottom: 0;
    }

    #box-open-acts {
        text-align: left;
        padding: 16px;
        /*#btn-openlocal {*/
            /*border-radius: 4px;*/
            /*background: @background-accent-button;*/
        /*} */
        .rtl & {
          text-align: right;
        }
    }

    #area-dnd-file {
      margin-block: 24px;
    }
  }

}

.connect {
  center {
    padding: 70px 20px;
  }

  #btn-connect {
    margin-top: 50px;
  }

  button {
    &[data-cprov] {
      width: 160px;
      margin: 0 20px 20px 0;
      color: @text-normal;

      img.icon {
        height: 100%;
        width: auto;
      }
    }
  }

  #box-providers-premium-button {
    > button {
      width: 340px;
    }
  }

  .theme-type-dark & {
    .icon__light {
      display: none;
    }
  }

  .theme-type-light & {
    .icon__dark {
      display: none;
    }
  }
}

.text-welcome {
  font-weight: 100;
}

.text-description {
  font-size: 15px;
  font-weight: normal;
}

.flexbox {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.flex-fill {
  flex-grow: 1;
}

.flex-item {
  overflow: hidden;
}

.recent-panel-container {
  display: grid;
  grid-auto-rows: max-content;
  gap: 40px;
  position: relative;
  height: 100%;
  padding-inline: 32px;
  max-width: 1680px;
  margin-inline: auto;
  margin-bottom: -40px;
  overflow-y: auto;
  color: @text-normal;

  .search-bar {
    margin-top: 40px;

    h1 {
      margin: 0;
    }
  }

  .files {
    display: flex;
    flex-direction: column;
    gap: 40px;
  }

  .win_xp & {
    display: block;
    padding-left: 32px;
    padding-right: 32px;
    margin-left: auto;
    margin-right: auto;
    .document-creation-grid {
      padding-left: 104px;
      padding-right: 112px;
      > * {
        margin-right: 32px;
      }

      > *:last-child {
        margin-right: 0;
      }
    }

    .file-list-head,
    .file-list-body .row {
      > * {
          margin-right: 8px; 
          width: 264px;
        }

        > :nth-child(2) {
          width: 500px;
        }

        > :nth-child(3) {
          width: 156px;
        }

        > :nth-child(4) {
          width: 34px;
          right: calc(1vw - 6px);
        }

        > *:last-child {
          margin-right: 0;
        }
    }

    .file-list-head {
      display: flex;
    }

    .file-list-body  {
      display: initial;
      .row {
        display: flex;
        > * {
          min-width: 30px;
        }
      }
    }
  }
}

.open-panel-container {
  .recent-panel-container();
   display: flex;
   flex-direction: column;
   padding: initial;
   overflow-y: auto;
   gap: 8px;
    .file-list-body {
      overflow-x: hidden;
    }

  .win_xp & {
   display: flex;
   padding: initial;
   .file-list-body  {
      .row {
        justify-content: flex-start;
        
        > * {
          margin-right: calc(8vw);
        }
      } 
    }  
  }  
}
/* ... */

